# NBT-Editor-Calagopus

./: Metadata.toml  README.md
backend/: Cargo.toml
backend/src/: lib.rs
backend/src/routes/: client_server.rs  mod.rs
backend/src/services/: nbt.rs
frontend/: package.json
frontend/src/: NbtEditorPage.tsx  api.ts  index.ts
