[package]
name = "cal_stef_nbteditor"
description = "NBT reader for octopusorcalagopuswhatever."
authors = ["Stef"]
version = "1.0.1"
edition = { workspace = true }

[dependencies]
shared = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
indexmap = { workspace = true }
chrono = { workspace = true }
compact_str = { workspace = true }
flate2 = "1"
reqwest = { workspace = true, features = ["multipart"] }
urlencoding = { workspace = true }
